# USV-telemetry-Rust

./: .gitignore  Cargo.toml  DEMO.md  README.md  build.sh  config.toml  index.html  serve.py
assets/: styles.css
src/: main.rs
src/components/: camera.rs  dashboard.rs  map.rs  mod.rs  status_panel.rs  telemetry_panel.rs
src/models/: mod.rs  telemetry.rs
